[tool.poetry]
name = "browser"
version = "0.1.0"
description = ""
authors = ["Liza Daly <lizadaly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
