[tool.poetry]
name = "browser"
version = "0.1.0"
description = ""
authors = ["Liza Daly <lizadaly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.0.1"
black = "^23.1.0"


[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
